# MathProject

./: README.md
CollatZ/: CMakeLists.txt  CollatZ.cpp  CollatZ.h  Collatzterm.hpp  basic.hpp  check.hpp  gterm.hpp  verify.hpp
CollatZ/papers/: Manuscript Images and Equations.pptx  Manuscript branches editable.xlsx  Manuscript.docx  excess.txt
EinsteinTiles/: EinsteinTiles.sln  EinsteinTiles.vcxproj  EinsteinTiles.vcxproj.filters  tiles.cpp  tiles.h
EinsteinTiles/EinsteinTiles/x64/Debug/: EinsteinTiles.exe.recipe  EinsteinTiles.ilk  vc143.idb
EinsteinTiles/EinsteinTiles/x64/Debug/EinsteinTiles.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  EinsteinTiles.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
Mnacci/: CMakeLists.txt  Mnacci.cpp  Mnacci.h  m.txt  pingal.cpp  sequence.cpp
